--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                 <a href="https://raw.githubusercontent.com/jqms/Lung/main/Main.cpp"
                     class="astro-DOHJNAO5">
                     <h2 class="astro-DOHJNAO5">
-                        View .🫁
+                        View 🫁
                         <span class="astro-DOHJNAO5">→</span>
                     </h2>
                     <p class="astro-DOHJNAO5">
@@ -533,7 +533,7 @@
                         <span class="astro-DOHJNAO5">→</span>
                     </h2>
                     <p class="astro-DOHJNAO5">
-                        Come say hi to our amazing Discord community 👋
+                        Come say 🫁 to our amazing Discord community 👋
                     </p>
                 </a>
             </li>
